siduxcc (0.5.6.6) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * remove #!/bin/bash from modules.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 31 Jul 2007 00:00:36 +0200

siduxcc (0.5.6.5) unstable; urgency=low

  * (build-) depend on gettext[-base].

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Jul 2007 23:50:10 +0200

siduxcc (0.5.6.4) unstable; urgency=low

  * siduxcclib added

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 25 Jul 2007 23:16:45 +0200

siduxcc (0.5.6.3) unstable; urgency=low

  * kde-menu entries added

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 19 Jul 2007 11:52:29 +0200

siduxcc (0.5.6.2) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * apache v1.3 is about to be removed from debian, don't offer it in siduxcc.

  [ Fabian Wuertz ]
  * siduxcc_kernel: second progressbar added

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 12 Jul 2007 11:30:36 +0200

siduxcc (0.5.6.1) unstable; urgency=low

  * siduxcc_network small design fix
  * siduxcc_kernel small design fix

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 11 Jul 2007 23:55:07 +0200

siduxcc (0.5.6) unstable; urgency=low

  * kernel-update function added
  * fix-font problem fixed
  * network script nicstatus added
  * siduxcc_network design changed
  * de-translation for the network-kioslave added
  * network script nicstatus added, again...

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 11 Jul 2007 22:56:00 +0200

siduxcc (0.5.5.8) unstable; urgency=low

  * Kernel remove button enable/disable bug fixed.

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 03 Jul 2007 11:30:48 +0200

siduxcc (0.5.5.7) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * fix FSF address, again...

  [ Fabian Wuertz ]
  * disable fix-fonts option

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 02 Jun 2007 20:34:10 +0200

siduxcc (0.5.5.6) unstable; urgency=low

  * copyright information added.

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 19 Jun 2007 23:07:10 +0200

siduxcc (0.5.5.5) unstable; urgency=low
