@@ -2,13 +2,9 @@
 Encoding=UTF-8
 Icon=siduxcc
 Type=Application
-Exec=kcmshell siduxcc_info
+Exec=siduxcc_info
 
-X-KDE-Library=siduxcc_info
-X-KDE-FactoryName=siduxcc_info
-X-KDE-ParentApp=kinfocenter
-
-Name=sidux Info
+Name=SysInfo
 Comment=Information about sidux
 Comment[de]=Informationen über sidux
 
