@@ -1,9 +1,15 @@
 siduxcc (0.5.6.6) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
   * remove #!/bin/bash from modules.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 31 Jul 2007 00:00:36 +0200
+  [ Fabian Wuertz ]
+  * siduxcc-hermes: du-detection fixed
+  * siduxcc_info: changed to a normal application
+ 
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 02 Aug 2007 20:10:29 +0200
 
 siduxcc (0.5.6.5) unstable; urgency=low
 
